revised home button

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid p-0">
     <nav class="navbar navbar-light navbar-expand-lg border-bottom bg-white fixed-top">
         <a class="navbar-brand"
+           title="Zur Startseite"
            [routerLink]="['/']"
            style="color: #343a40;">
             <img src="/assets/logos/logo.png"
