--- a/power/src/app/app.component.scss
+++ b/power/src/app/app.component.scss
@@ -2,6 +2,10 @@
     padding-top: 5px;
 }
 
+.navbar-brand:hover {
+    text-decoration: underline grey;
+}
+
 .navbar-toggler {
     outline: none;
 }
