--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -5,7 +5,7 @@
      aria-rowcount="4">
     <div class="card-header">
         <div class="sr-only caption"
-                 i18n>Tabelle Bodenrichtwertzone {{ feature.properties.nutzung | nutzung }}</div>
+             i18n>Tabelle Bodenrichtwertzone {{ feature.properties.nutzung | nutzung }}</div>
         <div class="row">
             <h5 class="col-md-5 mb-0"
                 role="rowheader"><b>{{brzStrings.brz | hyphenate}}</b></h5>
@@ -32,6 +32,16 @@
             <dd class="col-md-7"
                 role="cell">
                 {{feature.properties.brw | number}} &euro; / m&#178;
+            </dd>
+            <dt *ngIf="feature.properties.flae"
+                class="col-md-5"
+                role="rowheader">
+                {{brzStrings.area | hyphenate}}
+            </dt>
+            <dd *ngIf="feature.properties.flae"
+                class="col-md-7"
+                role="cell">
+                {{feature.properties.flae | number}} m&#178;
             </dd>
             <dt class="col-md-5"
                 role="rowheader"
