--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -39,12 +39,15 @@
                             gelangen.</label>
                         <input type="text"
                                class="form-control mr-2 w-mobile"
+                               name="pin"
+                               [(ngModel)]="form.pin"
+                               #pin="ngModel"
+                               [ngClass]="{ 'is-invalid': pinFormular.submitted && pin.invalid}"
+                               required
                                i18n-placeholder
                                placeholder="Formular PIN"
                                aria-labelledby="pin"
-                               aria-placeholder=""
-                               #pin>
-
+                               aria-placeholder="">
                         <button type="submit"
                                 class="btn btn-success"
                                 i18n-title
@@ -179,8 +182,8 @@
 
                 <div class="lead">
                     <a [routerLink]="['/forms/dashboard']"
-                        aria-label="Über diesen Link gelangen Sie zum Mitarbeiterportal."
-                        i18n-aria-label>
+                       aria-label="Über diesen Link gelangen Sie zum Mitarbeiterportal."
+                       i18n-aria-label>
                         <svg width="1em"
                              height="1em"
                              viewBox="0 0 16 16"
