Umrechnungskoeffizient: Sample calculation

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -87,7 +87,7 @@
                         ({{umrechnung.objid | objectId}})
                     </a>
                     <power-bodenrichtwert-detail-umrechnung #umrechnungstabelle
-                                                            [data]="umrechnung"></power-bodenrichtwert-detail-umrechnung>
+                                                            [data]="umrechnung" [brw]="feature.properties.brw"></power-bodenrichtwert-detail-umrechnung>
                 </dd>
             </ng-container>
         </dl>
