--- a/power/src/app/shared/geosearch/geosearch.component.html
+++ b/power/src/app/shared/geosearch/geosearch.component.html
@@ -2,7 +2,7 @@
        <input type="text"
               class="form-control"
               placement="bottom"
-              placeholder="Bitte Ort eingeben..."
+              placeholder="Bitte Adresse eingeben..."
               i18n-placeholder
               aria-label="Suche"
               aria-placeholder="Bitte geben Sie eine Adresse ein."
