--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -260,6 +260,25 @@
                    [filter]="['all',['in', 'entw', 'B', 'SF', 'R', 'E'],['==', 'stag', stichtag]]">
         </mgl-layer>
 
+        <mgl-layer *ngIf="teilmarkt.value.includes('B')"
+                   id="sanierungsgebiet"
+                   type="line"
+                   [source]="'geoserver'"
+                   [minzoom]="11"
+                   [sourceLayer]="'br_brzone_flat'"
+                   [paint]="{
+                        'line-color': '#0080FF',
+                        'line-dasharray': [7,5],
+                        'line-width': {
+                            'stops': [[11,0],[13,2],[18,4]]
+                            },
+                            'line-opacity': {
+                                'stops' : [[11,0],[13,.6]]
+                            }
+                    }"
+                   [filter]="['all',['in', 'verg', 'San', 'SoSt', 'Entw', 'StUb'],['==', 'stag', stichtag]]">
+        </mgl-layer>
+
         <mgl-layer *ngIf="teilmarkt.value.includes('LF')"
                    id="landwirtschaft"
                    type="line"
@@ -298,6 +317,28 @@
     }"
                    [filter]="['all',['in', 'entw', 'B','SF', 'R', 'E'],['==', 'stag', stichtag]]">
         </mgl-layer>
+
+        <!-- <mgl-layer *ngIf="teilmarkt.value.includes('B')"
+                   id="appto_sanierungsgebiet"
+                   type="symbol"
+                   [source]="'geoserver'"
+                   [sourceLayer]="'br_brzone_flat'"
+                   [minzoom]="13"
+                   [paint]="{
+                        'text-halo-color' : '#fff',
+                        'text-halo-width' : 2,
+                        'text-halo-blur' : 2,
+                        'text-color' : 'rgb(117, 129, 145)'
+                        }"
+                                        [layout]="{
+                        'text-field': '{verg}',
+                        'text-size': {
+                        'stops': [[12,10],[15,16]]
+                        },
+                        'text-font': ['Klokantech Noto Sans Regular']
+                    }"
+                   [filter]="['all',['in', 'verg', 'San', 'SoSt', 'Entw', 'StUb'],['==', 'stag', stichtag]]">
+        </mgl-layer> -->
 
         <mgl-layer *ngIf="teilmarkt.value.includes('LF')"
                    id="appto_landwirtschaft"
