--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -41,6 +41,16 @@
                                         (click)="onTeilmarktChange(tm)"
                                         ngbDropdownItem
                                         class="btn-block">
+                                    <svg width="0.75em"
+                                         height="0.75em"
+                                         viewBox="0 0 16 16"
+                                         class="bi bi-circle-fill"
+                                         [attr.fill]="tm.color"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <circle cx="8"
+                                                cy="8"
+                                                r="8" />
+                                    </svg>
                                     {{tm.viewValue}}
                                 </button>
                             </div>
@@ -249,7 +259,7 @@
                    [minzoom]="11"
                    [sourceLayer]="'br_brzone_flat'"
                    [paint]="{
-      'line-color': '#c4153a',
+      'line-color': teilmarkt.color,
       'line-width': {
         'stops': [[11,0],[13,1],[18,2]]
       },
@@ -286,7 +296,7 @@
                    [sourceLayer]="'br_brzone_flat'"
                    [minzoom]="10"
                    [paint]="{
-      'line-color': '#009900',
+      'line-color': teilmarkt.color,
       'line-width': {
         'stops': [[8,0],[10,1],[11,2]]
       },
