--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
@@ -47,7 +47,7 @@
                 <div class="card-header">
                     <b>Umrechnungstabelle</b>
                 </div>
-                <div class="card-body">
+                <div class="card-body p-0">
                     <table class="table table-bordered">
                         <thead>
                         <tr>
