removed number pipe from geschosszahl(gez)

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -106,7 +106,7 @@
             <dd *ngIf="feature.properties.gez"
                 class="col-md-7"
                 role="cell">
-                {{feature.properties.gez | number}}
+                {{feature.properties.gez }}
             </dd>
             <dt *ngIf="feature.properties.grz"
                 class="col-md-5"
