fixed overflow menubar with custom breakpoint

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper"
      [class]="isCollapsed ? '' : 'border'">
     <!-- desktop -->
-    <div [class]="isCollapsed ? 'd-none d-lg-block' : 'd-none d-xl-block'">
+    <div [class]="isCollapsed ? 'd-none d-lg-block' : 'd-none d-xxl-block'">
         <div class="nav-scroller bg-white shadow-sm border-top">
             <nav class="nav nav-underline d-flex justify-content-between">
                 <div class="nav">
@@ -104,7 +104,7 @@
     </div>
 
     <!-- mobile -->
-    <div [class]="isCollapsed ? 'd-lg-none' : 'd-xl-none'">
+    <div [class]="isCollapsed ? 'd-lg-none' : 'd-xxl-none'">
         <div class="nav-scroller bg-white shadow-sm border-top">
             <nav class="nav nav-underline">
                 <div class="nav mr-auto">
