improve teilmarkt selection for small displays

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -200,6 +200,7 @@
             <div class="btn-group"
                  style="flex: 1;"
                  ngbDropdown
+                 placement="bottom-right"
                  role="group"
                  aria-label="Button group with nested dropdown">
                 <button class="btn btn-block"
