--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
@@ -57,8 +57,14 @@
                         </thead>
                         <tbody>
                         <tr *ngFor="let wert of data.werte">
-                            <td>{{wert.bzwt | number}}</td>
-                            <td>{{wert.koef | number}}</td>
+                            <ng-container *ngIf="data.text != 'Art der Bebauung'">
+                                <td>{{wert.bzwt | number}}</td>
+                                <td>{{wert.koef | number}}</td>
+                            </ng-container>
+                            <ng-container *ngIf="data.text == 'Art der Bebauung'">
+                                <td>{{wert.bzwt | artDerBebauung}}</td>
+                                <td>{{wert.koef | number}}</td>
+                            </ng-container>
                         </tr>
                         </tbody>
                     </table>
@@ -72,7 +78,12 @@
                 </div>
                 <div class="card-body">
                     <p>Bodenrichtwert: {{brw}} € / m²</p>
-                    <p>Individueller Wert für {{einflussgroesse}}: {{data.werte[0].bzwt | number}}</p>
+                    <ng-container *ngIf="data.text != 'Art der Bebauung'">
+                        <p>Individueller Wert für {{einflussgroesse}}: {{data.werte[0].bzwt | number}}</p>
+                    </ng-container>
+                    <ng-container *ngIf="data.text == 'Art der Bebauung'">
+                        <p>Individueller Wert für {{einflussgroesse}}: {{data.werte[0].bzwt | artDerBebauung}}</p>
+                    </ng-container>
                     <p>Dazugehöriger Umrechnungskoeffizient: {{data.werte[0].koef | number}}</p>
                     <p>Individueller Bodenrichtwert: {{brw}} € / m² * {{data.werte[0].koef | number}} ≈ {{brw * data.werte[0].koef | number:'1.0-0'}} € / m²</p>
                 </div>
