--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
@@ -32,18 +32,17 @@ mgl-map {
 .nav-underline .nav-link {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-    font-size: 0.875rem;
-    color: #6c757d;
+    font-size: 1em;
+    color: black;
 }
 
 .nav-underline .nav-link:hover {
-    color: #007bff;
+    color: #c4153a;
     cursor: pointer;
 }
 
-.nav-underline .active {
-    font-weight: 500;
-    color: #343a40;
+.active {
+    color: #c4153a !important;
 }
 
 $grid-breakpoints: (
